# The-Game

./: .clang-format  .flake8  .gitignore  Makefile  README.md  StdSockets.pro  app.py  pyproject.toml  server.pro  talk.cpp  talk.h
Client/: Client  Client.pro  Makefile  client.cpp
ClientAsync/: ClientAsync  ClientAsync.pro  Makefile  clientAsync.cpp
Server/: Card.h  ConnectionManager.h  Group.h  Hand.h  Makefile  Pile.h  RequestManager.cpp  RequestManager.h  ReturnRequest.h  Server  Server.cpp  Server.pro  Stack.h  VirtualCLient.h  communication.cpp  communication.hpp  requestEnum.h  server.cpp  socket.cpp  socket.h  values.h
ServerAsync/: Makefile  ServerAsync  serverAsync.cpp
doc/: Doxyfile
src/client/: __init__.py  __main__.py  _connection.py  _gui.py
src/server/: server.cpp  server.hpp
src/server/connection/: ConnectionManager.hpp  communication.cpp  communication.hpp  socket.cpp  socket.hpp
src/server/models/: ReturnRequest.cpp  ReturnRequest.hpp  request.cpp  request.hpp
src/server/models/cards/: Card.cpp  Card.hpp  Hand.cpp  Hand.hpp  Pile.cpp  Pile.hpp  Stack  Stack.cpp  Stack.hpp
src/server/models/clients/: Group.cpp  Group.hpp  VirtualClient.cpp  VirtualClient.hpp
