[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["BleuXx <nilmar.exe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.5.1"

[tool.poetry.dev-dependencies]
