[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["BleuXx <nilmar.exe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.5.1"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
client = "client.__main__:main"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
no_pretty = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

[tool.pydocstyle]
convention = "numpy"
add_ignore = "D105"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
